--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
+    "highcharts": "^7.0.1",
     "ionic-angular": "^3.9.2",
     "ng2-charts": "^1.6.0",
     "rxjs": "~6.3.3",
