--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "firebase": "^5.5.8",
     "highcharts": "^7.0.1",
     "ionic-angular": "^3.9.2",
+    "jquery": "^3.3.1",
     "ng-feedback": "^1.1.8",
     "ng2-charts": "^1.6.0",
     "rxjs": "~6.3.3",
