--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.16",
+    "angular2-navigate-with-data": "^1.1.11",
     "angularfire2": "^5.1.0",
     "canvasjs": "^1.8.1",
     "chart.js": "^2.7.3",
@@ -54,7 +55,7 @@
     "@angular-devkit/schematics": "~7.0.0",
     "@angular/cli": "~7.0.0",
     "@angular/compiler": "~7.0.0",
-    "@angular/compiler-cli": "~7.0.0",
+    "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "~7.0.0",
     "@ionic/angular-toolkit": "~1.2.0",
     "@ionic/lab": "1.0.15",
