--- a/package.json
+++ b/package.json
@@ -23,16 +23,20 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ionic-native/background-mode": "^5.0.0",
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/google-plus": "^5.4.0",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.16",
+    "@sentry/cli": "^1.41.1",
     "angular2-navigate-with-data": "^1.1.11",
     "angularfire2": "^5.1.0",
     "canvasjs": "^1.8.1",
     "chart.js": "^2.7.3",
     "cordova-android": "^7.1.4",
+    "cordova-ios": "4.5.5",
+    "cordova-plugin-background-mode": "0.7.2",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-googleplus": "7.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -44,18 +48,19 @@
     "firebase": "^5.5.8",
     "highcharts": "^7.0.1",
     "ionic-angular": "^3.9.2",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.0",
     "ng-feedback": "^1.1.8",
     "ng2-charts": "^1.6.0",
     "rxjs": "~6.3.3",
+    "sentry-cordova": "^0.15.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.10.0",
-    "@angular-devkit/build-angular": "^0.13.6",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular-devkit/core": "~7.0.0",
     "@angular-devkit/schematics": "~7.0.0",
-    "@angular/cli": "~7.0.0",
+    "@angular/cli": "^7.3.8",
     "@angular/compiler": "~7.0.0",
     "@angular/compiler-cli": "^7.2.7",
     "@angular/language-service": "~7.0.0",
@@ -92,10 +97,12 @@
       "cordova-plugin-googleplus": {
         "REVERSED_CLIENT_ID": "com.googleusercontent.apps.48119150430-87dj9t81g9h1erfkibhtr7vva07kov0j",
         "PLAY_SERVICES_VERSION": "11.8.0"
-      }
+      },
+      "cordova-plugin-x-toast": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
