--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.16",
     "@sentry/cli": "^1.41.1",
+    "@sentry/wizard": "^0.12.1",
     "angular2-navigate-with-data": "^1.1.11",
     "angularfire2": "^5.1.0",
     "canvasjs": "^1.8.1",
@@ -51,6 +52,7 @@
     "jquery": "^3.4.0",
     "ng-feedback": "^1.1.8",
     "ng2-charts": "^1.6.0",
+    "raven-js": "^3.27.0",
     "rxjs": "~6.3.3",
     "sentry-cordova": "^0.15.0",
     "zone.js": "~0.8.26"
@@ -98,7 +100,9 @@
         "REVERSED_CLIENT_ID": "com.googleusercontent.apps.48119150430-87dj9t81g9h1erfkibhtr7vva07kov0j",
         "PLAY_SERVICES_VERSION": "11.8.0"
       },
-      "cordova-plugin-x-toast": {}
+      "cordova-plugin-x-toast": {},
+      "sentry-cordova": {},
+      "cordova-plugin-background-mode": {}
     },
     "platforms": [
       "android",
