--- a/package.json
+++ b/package.json
@@ -35,18 +35,20 @@
     "angularfire2": "^5.1.0",
     "canvasjs": "^1.8.1",
     "chart.js": "^2.7.3",
-    "cordova-android": "^7.1.4",
+    "cordova-android": "7.1.4",
     "cordova-ios": "4.5.5",
-    "cordova-plugin-background-mode": "0.7.2",
+    "cordova-plugin-background-mode": "^0.7.2",
     "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-googleplus": "7.0.1",
+    "cordova-plugin-googleplus": "^7.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^4.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-toast": "^2.7.2",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
+    "gradle": "^1.0.9",
     "highcharts": "^7.0.1",
     "ionic-angular": "^3.9.2",
     "jquery": "^3.4.0",
@@ -59,7 +61,7 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.10.0",
-    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular-devkit/core": "~7.0.0",
     "@angular-devkit/schematics": "~7.0.0",
     "@angular/cli": "^7.3.8",
@@ -105,8 +107,8 @@
       "cordova-plugin-background-mode": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
