--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~7.0.0",
     "@ionic-native/background-mode": "^5.0.0",
     "@ionic-native/core": "5.0.0-beta.21",
+    "@ionic-native/email-composer": "^5.5.1",
     "@ionic-native/google-plus": "^5.4.0",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
@@ -39,6 +40,7 @@
     "cordova-ios": "4.5.5",
     "cordova-plugin-background-mode": "^0.7.2",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-email-composer": "0.9.2",
     "cordova-plugin-googleplus": "^7.0.1",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^4.0.1",
@@ -104,11 +106,14 @@
       },
       "cordova-plugin-x-toast": {},
       "sentry-cordova": {},
-      "cordova-plugin-background-mode": {}
+      "cordova-plugin-background-mode": {},
+      "cordova-plugin-email-composer": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      }
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
