--- a/angular.json
+++ b/angular.json
@@ -34,7 +34,10 @@
                 "input": "src/global.scss"
               }
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/font-awesome/css/font-awesome.css"
+            ]
           },
           "configurations": {
             "production": {
