--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@sentry/wizard": "^0.12.1",
     "angular2-navigate-with-data": "^1.1.11",
     "angularfire2": "^5.1.0",
+    "bootstrap": "^4.3.1",
     "canvasjs": "^1.8.1",
     "chart.js": "^2.7.3",
     "cordova-android": "7.1.4",
@@ -50,6 +51,7 @@
     "cordova-plugin-x-toast": "^2.7.2",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
+    "font-awesome": "^4.7.0",
     "gradle": "^1.0.9",
     "highcharts": "^7.0.1",
     "ionic-angular": "^3.9.2",
