--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.16",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "@sentry/cli": "^1.41.1",
     "@sentry/wizard": "^0.12.1",
     "angular2-navigate-with-data": "^1.1.11",
@@ -40,14 +41,14 @@
     "cordova-android": "7.1.4",
     "cordova-ios": "4.5.5",
     "cordova-plugin-background-mode": "^0.7.2",
-    "cordova-plugin-device": "^2.0.2",
-    "cordova-plugin-email-composer": "0.9.2",
-    "cordova-plugin-googleplus": "^7.0.1",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-email-composer": "^0.9.2",
+    "cordova-plugin-googleplus": "^7.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^4.0.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-ionic-webview": "^4.1.1",
+    "cordova-plugin-splashscreen": "^5.0.3",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-x-toast": "^2.7.2",
     "core-js": "^2.5.4",
     "firebase": "^5.5.8",
