Signup_form Modification

--- a/package.json
+++ b/package.json
@@ -38,26 +38,33 @@
     "bootstrap": "^4.3.1",
     "canvasjs": "^1.8.1",
     "chart.js": "^2.7.3",
-    "cordova-android": "7.1.4",
+    "cordova-android": "^8.1.0",
+    "cordova-android-play-services-gradle-release": "^4.0.0",
+    "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-ios": "4.5.5",
+    "cordova-plugin-androidx": "^1.0.2",
+    "cordova-plugin-androidx-adapter": "^1.1.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-email-composer": "^0.9.2",
     "cordova-plugin-googleplus": "^7.0.2",
-    "cordova-plugin-ionic-keyboard": "^2.1.3",
-    "cordova-plugin-ionic-webview": "^4.1.1",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.3",
     "cordova-plugin-splashscreen": "^5.0.3",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-x-toast": "^2.7.2",
     "core-js": "^2.5.4",
+    "emulator": "0.1.0",
     "firebase": "^5.5.8",
     "font-awesome": "^4.7.0",
+    "fsevents": "^2.1.2",
     "gradle": "^1.0.9",
     "highcharts": "^7.0.1",
     "ionic-angular": "^3.9.2",
     "jquery": "^3.4.0",
     "ng-feedback": "^1.1.8",
     "ng2-charts": "^1.6.0",
+    "node-sass": "^4.13.0",
     "raven-js": "^3.27.0",
     "rxjs": "~6.3.3",
     "sentry-cordova": "^0.15.0",
@@ -110,11 +117,70 @@
       "sentry-cordova": {},
       "cordova-plugin-email-composer": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
-      }
+      },
+      "cordova-android-play-services-gradle-release": {
+        "PLAY-SERVICES-ADS": "18.0.0",
+        "PLAY-SERVICES-ADS-IDENTIFIER": "17.0.0",
+        "PLAY-SERVICES-ADS-LITE": "18.0.0",
+        "PLAY-SERVICES-AFS-NATIVE": "17.0.0",
+        "PLAY-SERVICES-ANALYTICS": "17.0.0",
+        "PLAY-SERVICES-ANALYTICS-IMPL": "17.0.0",
+        "PLAY-SERVICES-APPINVITE": "18.0.0",
+        "PLAY-SERVICES-AUDIENCE": "17.0.0",
+        "PLAY-SERVICES-AUTH": "17.0.0",
+        "PLAY-SERVICES-AUTH-API-PHONE": "17.0.0",
+        "PLAY-SERVICES-AWARENESS": "17.0.0",
+        "PLAY-SERVICES-BASE": "17.0.0",
+        "PLAY-SERVICES-BASEMENT": "17.0.0",
+        "PLAY-SERVICES-CAST": "17.0.0",
+        "PLAY-SERVICES-CAST-FRAMEWORK": "17.0.0",
+        "PLAY-SERVICES-CLEARCUT": "17.0.0",
+        "PLAY-SERVICES-CRONET": "17.0.0",
+        "PLAY-SERVICES-DRIVE": "17.0.0",
+        "PLAY-SERVICES-FIDO": "18.0.0",
+        "PLAY-SERVICES-FITNESS": "17.0.0",
+        "PLAY-SERVICES-FLAGS": "17.0.0",
+        "PLAY-SERVICES-GAMES": "18.0.0",
+        "PLAY-SERVICES-GASS": "18.0.0",
+        "PLAY-SERVICES-GCM": "17.0.0",
+        "PLAY-SERVICES-IDENTITY": "17.0.0",
+        "PLAY-SERVICES-IID": "17.0.0",
+        "PLAY-SERVICES-INSTANTAPPS": "17.0.0",
+        "PLAY-SERVICES-LOCATION": "17.0.0",
+        "PLAY-SERVICES-MAPS": "17.0.0",
+        "PLAY-SERVICES-MEASUREMENT": "17.0.0",
+        "PLAY-SERVICES-MEASUREMENT-API": "17.0.0",
+        "PLAY-SERVICES-MEASUREMENT-IMPL": "17.0.0",
+        "PLAY-SERVICES-MEASUREMENT-SDK": "17.0.0",
+        "PLAY-SERVICES-MEASUREMENT-SDK-API": "17.0.0",
+        "PLAY-SERVICES-NEARBY": "17.0.0",
+        "PLAY-SERVICES-OSS-LICENSES": "17.0.0",
+        "PLAY-SERVICES-PANORAMA": "17.0.0",
+        "PLAY-SERVICES-PHENOTYPE": "17.0.0",
+        "PLAY-SERVICES-PLACES": "17.0.0",
+        "PLAY-SERVICES-PLACES-PLACEREPORT": "17.0.0",
+        "PLAY-SERVICES-PLUS": "17.0.0",
+        "PLAY-SERVICES-SAFETYNET": "17.0.0",
+        "PLAY-SERVICES-STATS": "17.0.0",
+        "PLAY-SERVICES-TAGMANAGER": "17.0.0",
+        "PLAY-SERVICES-TAGMANAGER-API": "17.0.0",
+        "PLAY-SERVICES-TAGMANAGER-V4-IMPL": "17.0.0",
+        "PLAY-SERVICES-TASKS": "17.0.0",
+        "PLAY-SERVICES-VISION": "18.0.0",
+        "PLAY-SERVICES-VISION-COMMON": "18.0.0",
+        "PLAY-SERVICES-VISION-IMAGE-LABEL": "18.0.0",
+        "PLAY-SERVICES-WALLET": "17.0.0",
+        "PLAY-SERVICES-WEARABLE": "17.0.0"
+      },
+      "cordova-android-support-gradle-release": {
+        "ANDROID_SUPPORT_VERSION": "27.0.0"
+      },
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
