--- a/package.json
+++ b/package.json
@@ -13,18 +13,19 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.13.0",
     "@angular/animations": "^7.1.2",
     "@angular/cdk": "^7.1.1",
     "@angular/common": "~7.0.0",
-    "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/http": "~7.2.16",
     "@angular/material": "^7.1.1",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "@ionic-native/background-mode": "^5.0.0",
-    "@ionic-native/core": "5.0.0-beta.21",
+    "@ionic-native/core": "^5.19.1",
     "@ionic-native/email-composer": "^5.5.1",
     "@ionic-native/google-plus": "^5.4.0",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
@@ -55,7 +56,7 @@
     "cordova-plugin-x-toast": "^2.7.2",
     "core-js": "^2.5.4",
     "emulator": "0.1.0",
-    "firebase": "^5.5.8",
+    "firebase": "^7.7.0",
     "font-awesome": "^4.7.0",
     "fsevents": "^2.1.2",
     "gradle": "^1.0.9",
@@ -64,15 +65,15 @@
     "jquery": "^3.4.0",
     "ng-feedback": "^1.1.8",
     "ng2-charts": "^1.6.0",
+    "node-pre-gyp": "^0.14.0",
     "node-sass": "^4.13.0",
     "raven-js": "^3.27.0",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.5.4",
     "sentry-cordova": "^0.15.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.10.0",
-    "@angular-devkit/build-angular": "^0.13.9",
     "@angular-devkit/core": "~7.0.0",
     "@angular-devkit/schematics": "~7.0.0",
     "@angular/cli": "^7.3.8",
