--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@angular/animations": "^7.1.2",
     "@angular/cdk": "^7.1.1",
     "@angular/common": "~7.0.0",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
+    "@angular/core": "~7.0.0",
+    "@angular/forms": "~7.0.0",
     "@angular/http": "~7.2.16",
     "@angular/material": "^7.1.1",
     "@angular/platform-browser": "~7.0.0",
